--- a/src/index.html
+++ b/src/index.html
@@ -196,7 +196,7 @@
 
     </section>
 
-    <section style="display: none;" class="section section_choice choice">
+    <section class="section section_choice choice">
       <div class="container choice__container">
         <h2 class="choice__title title title_40">
           Выбрать квартиру мечты
@@ -205,7 +205,7 @@
 
         <div class="choice__form" action="#" method="post" enctype="multipart/form-data">
 
-          <div class="choice__input-block">
+          <div class="choice__input-block choice__input-block_project">
             <p class="choice__label">
               Проект
             </p>
@@ -229,7 +229,7 @@
             </div>
           </div>
 
-          <div class="choice__input-block">
+          <div class="choice__input-block choice__input-block_rooms">
             <p class="choice__label">
               Комнат
             </p>
@@ -252,7 +252,7 @@
             </div>
           </div>
 
-          <div class="choice__input-block">
+          <div class="choice__input-block choice__input-block_square">
             <p class="choice__label">
               Площадь, м2
             </p>
@@ -330,14 +330,14 @@
             <p class="choice__text">
               найдено 5 квартир
             </p>
-            <a class="choice__btn-request btn btn_dark" href="apartments.html">
+            <a class="choice__btn-request btn btn_dark" href="#">
               Смотреть квартиры
             </a>
+
+            <a class="choice__btn-request choice__btn-request_mobile btn btn_dark" href="#">
+              Фильтр
+            </a>
           </div>
-
-
-
-
         </div>
       </div>
     </section>
