добавит адаптив блока "в районах сибири"

--- a/src/index.html
+++ b/src/index.html
@@ -342,7 +342,7 @@
       </div>
     </section>
 
-    <section style="display: none;" class="section section_regions regions">
+    <section class="section section_regions regions">
       <div class="container regions__container regions_swiper">
         <h2 class="regions__title title title_40">
           В районах Сибири
