добавит модалку выбора квартиры

--- a/src/index.html
+++ b/src/index.html
@@ -334,9 +334,9 @@
               Смотреть квартиры
             </a>
 
-            <a class="choice__btn-request choice__btn-request_mobile btn btn_dark" href="#">
+            <button class="choice__btn-request choice__btn-request_mobile btn btn_dark">
               Фильтр
-            </a>
+            </button>
           </div>
         </div>
       </div>
