добавит мобильное меню

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
           Срок сдачи 1 очереди – II квартал 2025 года
         </p>
 
-        <a class="banner__btn btn btn_dark btn_reset" href="apartments.html" scrollspy="plans">
+        <a class="banner__btn btn btn_dark btn_reset" href="kvartiry.html" scrollspy="plans">
           Смотреть планировки
         </a>
         <!-- </div> -->
@@ -108,7 +108,7 @@
                     от 28,72 до 83,61
                   </p>
                 </div>
-                <a class="building__card-link" href="apartments.html">
+                <a class="building__card-link" href="kvartiry.html">
                   128 квартир
                 </a>
               </div>
@@ -437,7 +437,7 @@
               </g>
             </svg>
           </div>
-  
+
           <div class="swiper-button swiper-button-next swiper-button-next_reg">
             <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g opacity="0.8">
@@ -447,7 +447,7 @@
               </g>
             </svg>
           </div>
-  
+
         </div>
       </div>
 
@@ -461,7 +461,7 @@
             Квартиры
           </h2>
 
-          <a class="apartments__button apartments__button_desc btn btn_dark" href="apartments.html">
+          <a class="apartments__button apartments__button_desc btn btn_dark" href="kvartiry.html">
             Посмотреть все квартиры
           </a>
         </div>
@@ -1145,7 +1145,7 @@
           </li>
         </ul>
 
-        <a class="apartments__button apartments__button_mob btn btn_green" href="apartments.html">
+        <a class="apartments__button apartments__button_mob btn btn_green" href="kvartiry.html">
           Посмотреть все квартиры
         </a>
 
@@ -1159,7 +1159,7 @@
               </g>
             </svg>
           </div>
-  
+
           <div class="swiper-button swiper-button-next swiper-button-next_apart">
             <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g opacity="0.8">
@@ -1169,7 +1169,7 @@
               </g>
             </svg>
           </div>
-  
+
         </div>
       </div>
 
@@ -1353,7 +1353,7 @@
               </g>
             </svg>
           </div>
-  
+
           <div class="swiper-button swiper-button-next swiper-button-next_promo">
             <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g opacity="0.8">
@@ -1363,7 +1363,7 @@
               </g>
             </svg>
           </div>
-  
+
         </div>
       </div>
     </section>
@@ -1435,7 +1435,7 @@
               </g>
             </svg>
           </div>
-  
+
           <div class="swiper-button swiper-button-next swiper-button-next_news">
             <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g opacity="0.8">
@@ -1445,7 +1445,7 @@
               </g>
             </svg>
           </div>
-  
+
         </div>
       </div>
     </section>
