--- a/src/kommercia.html
+++ b/src/kommercia.html
@@ -311,7 +311,7 @@
 
           <div class="choice__reset-wrap">
             <button class="choice__btn-reset" href="#popup-form">
-              <a class="choice__btn-text" href="apartments.html">
+              <a class="choice__btn-text" href="kvartiry.html">
                 Сбросить фильтры
               </a>
               <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -705,7 +705,7 @@
             </a>
 
           </li>
-          
+
         </ul>
         <button class="apartments__button btn btn_dark">
           Показать еще 8 планировок
