--- a/src/project-item.html
+++ b/src/project-item.html
@@ -16,7 +16,7 @@
             Сосновый квартал
           </h2>
 
-          <a class="about__link btn btn_dark" href="apartments.html">
+          <a class="about__link btn btn_dark" href="kvartiry.html">
             Смотреть квартиры
           </a>
 
@@ -276,7 +276,7 @@
                 <p class="choice__text">
                   найдено 5 квартир
                 </p>
-                <a class="choice__btn-request btn btn_dark" href="apartments.html">
+                <a class="choice__btn-request btn btn_dark" href="kvartiry.html">
                   Смотреть квартиры
                 </a>
               </div>
