--- a/src/commercial-item.html
+++ b/src/commercial-item.html
@@ -11,7 +11,7 @@
     <section class="section commercial-item-page__section about">
       <div class="container about__container">
         <div class="about__left">
-          <a class="about__btn-back" href="apartments.html">
+          <a class="about__btn-back" href="kvartiry.html">
             <svg width="10" height="15" viewBox="0 0 10 15" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M8.5 13.5L1.5 7.5L8.5 1.5" stroke="#646464" stroke-width="1.5" stroke-linecap="round"
                 stroke-linejoin="round" />
