--- a/src/html/header.html
+++ b/src/html/header.html
@@ -23,6 +23,13 @@
                   </p>
                 </a>
               </li>
+              <li class="nav__item nav__item_apartments">
+                <a href="kvartiry.html" class="nav__link">
+                  <p class="nav__text">
+                    Квартиры
+                  </p>
+                </a>
+              </li>
               <li class="nav__item">
                 <a href="kommercia.html" class="nav__link">
                   <p class="nav__text">
