--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -353,4 +353,32 @@
   </div>
 </div>
 
+<div class="popup" id="menu">
+  <div class="popup__body">
+    <div class="popup__content popup__promo menu">
+
+      <div class="header__logo logo">
+        <a href="index.html" class="logo__link">
+          <img class="logo__main" width="116" height="43" src="@img/logo.svg" alt="Логотип Сибирь">
+        </a>
+      </div>
+
+      <div class="footer__contacts contacts">
+        <a href="tel:8 (3452) 611-157" class="contacts__item contacts__item_phone">
+          8 (3452) 611-157
+        </a>
+        <a href="mailto:sosnovy@siberiadev.ru" class="contacts__item contacts__item_email">
+          sosnovy@siberiadev.ru
+        </a>
+      </div>
+
+      <button class="promo__close">
+        <svg width="32" height="17" viewBox="0 0 32 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M1 1L31 16M31 1L1 16" stroke="#8C8C8C" stroke-width="1.5"/>
+        </svg>                 
+      </button>
+    </div>
+  </div>
+</div>
+
 
