исправит поведение селектов

--- a/src/index.html
+++ b/src/index.html
@@ -330,7 +330,7 @@
             <p class="choice__text">
               найдено 5 квартир
             </p>
-            <a class="choice__btn-request btn btn_dark" href="#">
+            <a class="choice__btn-request btn btn_dark" href="kvartiry.html">
               Смотреть квартиры
             </a>
 
