Добавит адаптив страницы "проекты"

--- a/src/proekty.html
+++ b/src/proekty.html
@@ -66,7 +66,7 @@
                       Площадь
                     </p>
                     <p class="project-page__card-value">
-                      от 28,72 до 83,61
+                      от 28,72
                     </p>
                   </div>
                   <p class="project-page__card-link">
@@ -127,77 +127,83 @@
             </a>
 
           </li>
+
           <li class="project-page__item project-page__item_no-show">
-            <div class="project-page__card-img">
-              <img src="@img/building-1.jpg" alt="">
-              <div class="project-page__card-info">
-                <p class="project-page__card-label">
-                  СКОРО
-                </p>
-              </div>
-            </div>
-            <div class="project-page__card-content">
-              <h3 class="project-page__card-title title title_25">
-                Островский
-              </h3>
-              <div class="project-page__card-footer">
-                <div class="project-page__card-bot-wrap">
-                  <p class="project-page__card-key">
-                    Срок сдачи
-                  </p>
-                  <p class="project-page__card-value">
-                    II квартал 2025
+            <a class="project-page__link" href="project-item.html">
+              <div class="project-page__card-img">
+                <img src="@img/building-1.jpg" alt="">
+                <div class="project-page__card-info">
+                  <p class="project-page__card-label">
+                    СКОРО
                   </p>
                 </div>
-                <div class="project-page__card-bot-wrap">
-                  <p class="project-page__card-key">
-                    Площадь
-                  </p>
-                  <p class="project-page__card-value">
-                    от 28,72 до 83,61
+              </div>
+              <div class="project-page__card-content">
+                <h3 class="project-page__card-title title title_25">
+                  Островский
+                </h3>
+
+
+                <div class="project-page__card-footer">
+                  <div class="project-page__card-bot-wrap">
+                    <p class="project-page__card-key">
+                      Срок сдачи
+                    </p>
+                    <p class="project-page__card-value">
+                      II квартал 2025
+                    </p>
+                  </div>
+                  <div class="project-page__card-bot-wrap">
+                    <p class="project-page__card-key">
+                      Площадь
+                    </p>
+                    <p class="project-page__card-value">
+                      от 28,72
+                    </p>
+                  </div>
+                  <p class="project-page__card-link">
+                    128 квартир
                   </p>
                 </div>
-                <p class="project-page__card-link">
-                  128 квартир
-                </p>
               </div>
-            </div>
+            </a>
           </li>
           <li class="project-page__item project-page__item_no-show">
-            <div class="project-page__card-img">
-              <img src="@img/building-2.jpg" alt="">
-              <div class="project-page__card-info">
-                <svg width="24" height="27" viewBox="0 0 24 27" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M12 0C12 2 8 6 4.80015 6M12 0V6.75M12 0C12 2 16 6 19.1998 6M12 27V14.625M12 6.75C10.6666 9.25 7.99983 14 1.59997 14M12 6.75V14.625M12 6.75C13.3334 9.25 16.0002 14 22.4 14M12 14.625C10.4 17.4583 5.75988 22.5 0 22.5M12 14.625C13.6001 17.4583 18.2401 22.5 24 22.5"
-                    stroke="white" stroke-width="3" />
-                </svg>
-                <p class="project-page__card-label project-page__card-label_small">
-                  Сосновый
-                </p>
-                <div class="project-page__card-info-btn">
-                  Сдан
+            <a class="project-page__link" href="project-item.html">
+
+              <div class="project-page__card-img">
+                <img src="@img/building-2.jpg" alt="">
+                <div class="project-page__card-info">
+                  <svg width="24" height="27" viewBox="0 0 24 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M12 0C12 2 8 6 4.80015 6M12 0V6.75M12 0C12 2 16 6 19.1998 6M12 27V14.625M12 6.75C10.6666 9.25 7.99983 14 1.59997 14M12 6.75V14.625M12 6.75C13.3334 9.25 16.0002 14 22.4 14M12 14.625C10.4 17.4583 5.75988 22.5 0 22.5M12 14.625C13.6001 17.4583 18.2401 22.5 24 22.5"
+                      stroke="white" stroke-width="3" />
+                  </svg>
+                  <p class="project-page__card-label project-page__card-label_small">
+                    Сосновый
+                  </p>
+                  <div class="project-page__card-info-btn">
+                    Сдан
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="project-page__card-content">
-              <h3 class="project-page__card-title title title_25">
-                Сосновый
-              </h3>
-
-              <div class="project-page__card-footer">
-                <div class="project-page__card-bot-wrap">
-                  <p class="project-page__card-key">
-                    Срок сдачи
+              <div class="project-page__card-content">
+                <h3 class="project-page__card-title title title_25">
+                  Сосновый
+                </h3>
+                <div class="project-page__card-footer">
+                  <div class="project-page__card-bot-wrap">
+                    <p class="project-page__card-key">
+                      Срок сдачи
+                    </p>
+                    <p class="project-page__card-value">
+                      Сдан
+                    </p>
+                  </div>
+                  <p class="project-page__card-link">
+                    128 квартир
                   </p>
-                  <p class="project-page__card-value">
-                    II квартал 2025
-                  </p>
-                </div>
-                <p class="project-page__card-link">
-                  128 квартир
-                </p>
-                <!-- <div class="project-page__card-bot-wrap">
+                  <!-- <div class="project-page__card-bot-wrap">
                   <p class="project-page__card-key">
                     Площадь
                   </p>
@@ -208,95 +214,12 @@
                 <p class="project-page__card-link">
                   128 квартир
                 </p> -->
+                </div>
               </div>
-            </div>
-          </li>
-          <li class="project-page__item project-page__item_no-show">
-            <div class="project-page__card-img">
-              <img src="@img/building-1.jpg" alt="">
-              <div class="project-page__card-info">
-                <p class="project-page__card-label">
-                  СКОРО
-                </p>
-              </div>
-            </div>
-            <div class="project-page__card-content">
-              <h3 class="project-page__card-title title title_25">
-                Островский
-              </h3>
+            </a>
 
-
-              <div class="project-page__card-footer">
-                <div class="project-page__card-bot-wrap">
-                  <p class="project-page__card-key">
-                    Срок сдачи
-                  </p>
-                  <p class="project-page__card-value">
-                    II квартал 2025
-                  </p>
-                </div>
-                <div class="project-page__card-bot-wrap">
-                  <p class="project-page__card-key">
-                    Площадь
-                  </p>
-                  <p class="project-page__card-value">
-                    от 28,72 до 83,61
-                  </p>
-                </div>
-                <p class="project-page__card-link">
-                  128 квартир
-                </p>
-              </div>
-            </div>
           </li>
-          <li class="project-page__item project-page__item_no-show">
-            <div class="project-page__card-img">
-              <img src="@img/building-2.jpg" alt="">
-              <div class="project-page__card-info">
-                <svg width="24" height="27" viewBox="0 0 24 27" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M12 0C12 2 8 6 4.80015 6M12 0V6.75M12 0C12 2 16 6 19.1998 6M12 27V14.625M12 6.75C10.6666 9.25 7.99983 14 1.59997 14M12 6.75V14.625M12 6.75C13.3334 9.25 16.0002 14 22.4 14M12 14.625C10.4 17.4583 5.75988 22.5 0 22.5M12 14.625C13.6001 17.4583 18.2401 22.5 24 22.5"
-                    stroke="white" stroke-width="3" />
-                </svg>
-                <p class="project-page__card-label project-page__card-label_small">
-                  Сосновый
-                </p>
-                <div class="project-page__card-info-btn">
-                  Сдан
-                </div>
-              </div>
-            </div>
-            <div class="project-page__card-content">
-              <h3 class="project-page__card-title title title_25">
-                Сосновый
-              </h3>
 
-              <div class="project-page__card-footer">
-                <div class="project-page__card-bot-wrap">
-                  <p class="project-page__card-key">
-                    Срок сдачи
-                  </p>
-                  <p class="project-page__card-value">
-                    II квартал 2025
-                  </p>
-                </div>
-                <p class="project-page__card-link">
-                  128 квартир
-                </p>
-                <!-- <div class="project-page__card-bot-wrap">
-                  <p class="project-page__card-key">
-                    Площадь
-                  </p>
-                  <p class="project-page__card-value">
-                    от 28,72 до 83,61
-                  </p>
-                </div>
-                <p class="project-page__card-link">
-                  128 квартир
-                </p> -->
-              </div>
-            </div>
-          </li>
         </ul>
         <div class="project-page__map" id="map">
         </div>
