--- a/src/project-item.html
+++ b/src/project-item.html
@@ -61,7 +61,7 @@
       </div>
     </section>
 
-    <section style="display: none;" class="section section_slim slim">
+    <section class="section section_slim slim">
 
       <section class="section section_slider slider" id="about-project">
         <div class="container slider__container ">
@@ -141,7 +141,7 @@
         </div>
       </section>
 
-      <section style="display: none;"  class="section section_choice choice">
+      <section class="section section_choice choice">
         <div class="container choice__container">
           <div class="choice__wrap wrap">
             <h2 class="choice__title title title_40">
@@ -273,7 +273,7 @@
     
               <div class="choice__btn-wrap">
                 <p class="choice__text">
-                  найдено 5 квартир
+                  Найдено 5 квартир
                 </p>
                 <a class="choice__btn-request btn btn_dark" href="kvartiry.html">
                   Смотреть квартиры
@@ -291,7 +291,7 @@
         </div>
       </section>
 
-      <section style="display: none;" class="section section_regions regions" id="advantages">
+      <section class="section section_regions regions" id="advantages">
         <div class="container regions__container">
           <div class="regions__wrap wrap regions_swiper">
             <h2 class="regions__title title title_40">
