добавит адаптив блока местоположение

--- a/src/project-item.html
+++ b/src/project-item.html
@@ -690,7 +690,7 @@
                 Коммерческие помещения
               </h2>
 
-              <a class="commercial__button btn btn_dark" href="commercial.html">
+              <a class="commercial__button commercial__button_top btn btn_dark" href="commercial.html">
                 Смотреть все
               </a>
             </div>
@@ -1005,6 +1005,10 @@
 
               </li>
             </ul>
+
+            <a class="commercial__button commercial__button_bot btn btn_dark" href="commercial.html">
+              Смотреть все
+            </a>
           </div>
 
           <aside class="commercial__aside aside">
